--- a/interprete/pom.xml
+++ b/interprete/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.miorganizacion.simple</groupId>
-	<artifactId>interprete</artifactId>
+	<groupId>com.miorganizacion.simple.interprete</groupId>
+	<artifactId>interprete2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Antlr 4 Archetype</name>
 	<packaging>jar</packaging>
